Fix bad overflow in barchart

--- a/components/Visualization/BarChart/styles.scss
+++ b/components/Visualization/BarChart/styles.scss
@@ -6,11 +6,13 @@ $color-bar-hovered: $color-primary !default;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    overflow-y: auto;
     background-color: $color-foreground;
 
     .content {
         display: flex;
         flex-direction: column;
+        overflow-y: auto;
         flex-grow: 1;
 
         :global svg {
